--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -67,4 +67,138 @@
     
     
     
+    
+    <!-- NUEVAS VISTAS -->
+    <record model="ir.ui.view" id="view_stock_production_lot_eltete_nuevo_form">
+        <field name="name">stock.production.lot.eltete.nuevo.form</field>
+        <field name="model">stock.production.lot</field>
+        <field name="arch" type="xml">
+            <form string="Ofertas">
+                
+                <sheet>
+                    <group>
+                        <field name="name" />
+                        
+                        <field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}"  />
+                        <field name="is_cantonera" invisible="1"/>
+                        <field name="is_perfilu" invisible="1"/>
+                        <field name="is_slipsheet" invisible="1"/>
+                        <field name="is_solidboard" invisible="1"/>
+                        <field name="is_formato" invisible="1"/>
+                        <field name="is_bobina" invisible="1"/>
+                        <field name="is_pieballet" invisible="1"/>
+                        <field name="is_flatboard" invisible="1"/>
+                        <field name="is_varios" invisible="1"/>
+                        
+                        <field name="product_id" />
+                    </group>
+                    
+                    <h3>Referencia</h3>
+                    <group>
+                        <field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
+                        <field name='ala_1' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
+                        <field name='ancho' attrs="{'invisible': ['|',('is_cantonera', '=', True),('is_pieballet', '=', True),]}"/>
+                        <field name='ala_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
+                        <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
+                        <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
+                        <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
+                        <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_flatboard', '=', False),]}" />
+                        <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
+                        <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
+                        <field name='gramaje' attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>	
+                        <field name='tipo_varios_id'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
+                    </group>
+                    
+
+                    
+                    <br/><br/>
+                    <h3>ATRIBUTOS</h3>
+                    
+                    <group>
+                    
+                        <!-- CANTONERA -->
+                        <field name='cantonera_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='cantonera_forma_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='cantonera_especial_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='cantonera_impresion_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='cantonera_cliche_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='fsc_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='reciclable_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='paletizado' attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='user_cantonera_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='user_cantonera_forma_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='user_cantonera_especial_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='user_cantonera_impresion_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='user_cantonera_cliche_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='user_fsc_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='user_reciclable_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                        <field name='user_paletizado' attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                
+                
+                        <!-- PERFIL U -->
+                        <field name='perfilu_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_perfilu', '=', False)]}"/>
+                        <field name='user_perfilu_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_perfilu', '=', False)]}"/>
+                        
+                        
+                        <!-- CANTONERA Y PERFIL U -->
+                        <field name='inglete_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
+                        <field name='inglete_num' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
+                        <field name='inglete_texto' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
+                        <field name='user_inglete_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
+                        <field name='user_inglete_num' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
+                        <field name='user_inglete_texto' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
+                        
+                        
+                        <!-- SOLIDBOARD -->
+                        <field name='plancha_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_solidboard', '=', False)]}"/>
+                        <field name='user_plancha_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_solidboard', '=', False)]}"/>
+                        
+                        
+                        <!-- FORMATO Y BOBINA -->
+                        <field name='papel_calidad_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
+                        <field name='user_papel_calidad_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
+                        
+                        
+                        <!-- SLIPSHEET, SOLIDBOARD Y FORMATO -->
+                        <field name='troquelado_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_formato', '=', False),]}"/>
+                        <field name='user_troquelado_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_formato', '=', False),]}"/>
+                        
+                        
+                        <!-- TODOS -->
+                        <field name="pallet_especial_id"/>
+                        <field name="ancho_pallet"/>
+                        <field name="und_paquete"/>
+                        <field name="unidades"/>
+                        <field name="user_pallet_especial_id"/>
+                        <field name="user_ancho_pallet"/>
+                        <field name="user_und_paquete"/>
+                        <field name="user_unidades"/>
+                        
+                    </group>
+                    
+                    <group>
+                        <button name="crear_sin_pedido" type="object" string="Crear sin pedido" />
+                    </group>
+                    
+
+                    
+
+                </sheet>
+            </form>
+        </field>
+    </record>
+    
+    
+    <record model="ir.actions.act_window" id="action_stock_production_lot_eltete_nuevo">
+        <field name="name">Alta de lotes</field>
+        <field name="res_model">stock.production.lot</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <menuitem name="Alta de lotes" parent="sale.product_menu_catalog" id="menu_stock_production_lot_eltete_nuevo" action="action_stock_production_lot_eltete_nuevo" sequence="105"/>
+    
+    
+    
+    
 </odoo>
